services/orchest-controller/deploy-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchest-controller
  namespace: orchest
  labels:
      app: orchest-controller
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: orchest-controller
